# ProjektCPP

./: CMakeLists.txt  README.md  info.txt  main.cpp  pytania.txt
lib/: biblioteka.h  game.cpp  gracz.cpp  interface.cpp  question.cpp  ranking.cpp  wynik.cpp
